2004-01-29  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.1 released.

2004-01-28  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14 released.

2004-01-24  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms): Set MALLOC_0_IS_NONNULL to 0.
	(config.h.msvc): Set MALLOC_0_IS_NONNULL to 1.

2004-01-12  Bruno Haible  <bruno@clisp.org>

	* windows/gettextlib.def: Add compile_csharp_class,
	execute_csharp_program.
	* windows/gettextsrc.def: Add formatstring_csharp. Rename
	get_c99_format_directives to get_sysdep_c_format_directives.

2004-01-17  Bruno Haible  <bruno@clisp.org>

	* windows/gettextlib.rc: Bump version number to 0.14.
	* windows/gettextsrc.rc: Likewise.
	* windows/gettextpo.rc: Likewise.

2004-01-10  Bruno Haible  <bruno@clisp.org>

	* configure.ac: When --disable-csharp was given, set BUILDCSHARP=no.

2003-12-26  Bruno Haible  <bruno@clisp.org>

	Support for C#.
	* configure.ac: Invoke gt_CSHARPCOMP, gt_CSHARPEXEC. Set BUILDCSHARP
	and TESTCSHARP.
	(AC_CONFIG_FILES): Add lib/csharpcomp.sh and lib/csharpexec.sh.

2003-12-27  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Set and AC_SUBST the TESTLIBASPRINTF variable.

2003-12-12  Bruno Haible  <bruno@clisp.org>

	Assume automake-1.8.
	* Makefile.am (html): Remove rule.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Remove computation of LTALLOCA.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_ALLOCSA instead of gl_FUNC_ALLOCA.
	* windows/gettextlib.def: Add mallocsa, xmallocsa, freesa.

2003-12-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13.1 released.

2003-12-02  Bruno Haible  <bruno@clisp.org>

	* Makefile.msvc (all, install, installdirs, uninstall, check,
	mostlyclean, clean, distclean, maintainer-clean): Create the intl
	directory if it doesn't exist. Needed because a widespread archiving
	tool on Windows doesn't extract empty directories that are present in
	.tar.gz files.
	Reported by Stefan Kowski <stefan.kowski@parks-informatik.de>.
