@@ -109,6 +109,7 @@ OBJECTS = \
   concatpath.obj \
   pipe.obj \
   progname.obj progreloc.obj \
+  quotearg.obj \
   safe-read.obj \
   safe-write.obj \
   sh-quote.obj \
@@ -230,6 +231,9 @@ progname.obj : progname.c
 
 progreloc.obj : progreloc.c
 	$(CC) $(INCLUDES) $(CFLAGS) $(PICFLAGS) -c progreloc.c
+
+quotearg.obj : quotearg.c
+	$(CC) $(INCLUDES) $(CFLAGS) $(PICFLAGS) -c quotearg.c
 
 safe-read.obj : safe-read.c
 	$(CC) $(INCLUDES) $(CFLAGS) $(PICFLAGS) -c safe-read.c
