@@ -1,3 +1,7 @@
+2004-02-07  Bruno Haible  <bruno@clisp.org>
+
+	* configure.ac: Invoke gl_QUOTEARG.
+
 2004-01-29  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.14.1 released.
